updated to 0.2.1-SNAPSHOT

--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,11 @@
 
     <groupId>org.tuxdevelop</groupId>
     <artifactId>spring-batch-lightmin-samples</artifactId>
-    <version>0.2.0</version>
+    <version>0.2.1-SNAPSHOT</version>
 
     <properties>
         <platform-bom.version>2.0.3.RELEASE</platform-bom.version>
-        <lightmin.version>0.2.0</lightmin.version>
+        <lightmin.version>0.2.1-SNAPSHOT</lightmin.version>
         <datafactory.version>0.8</datafactory.version>
         <!-- plugin versions -->
         <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
