--- a/address-migrator/address-migrator-boot/pom.xml
+++ b/address-migrator/address-migrator-boot/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>address-migrator</artifactId>
         <groupId>org.tuxdevelop</groupId>
-        <version>0.2.0</version>
+        <version>0.2.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
