--- a/address-migrator/pom.xml
+++ b/address-migrator/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>spring-batch-lightmin-samples</artifactId>
         <groupId>org.tuxdevelop</groupId>
-        <version>0.2.0</version>
+        <version>0.2.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
