updated to next branch dependencies

--- a/address-migrator/address-migrator-boot/src/main/resources/application.yml
+++ b/address-migrator/address-migrator-boot/src/main/resources/application.yml
@@ -2,3 +2,8 @@
 server:
   port: 9009
   servlet-path: /addressMigrator/
+spring:
+  batch:
+    lightmin:
+      server:
+        url: http://localhost:50100
