--- a/pom.xml
+++ b/pom.xml
@@ -9,15 +9,16 @@
 
     <modules>
         <module>address-migrator</module>
+        <module>spring-batch-lightmin-server-sample</module>
     </modules>
 
     <groupId>org.tuxdevelop</groupId>
     <artifactId>spring-batch-lightmin-samples</artifactId>
-    <version>0.2.1-SNAPSHOT</version>
+    <version>0.3.0-SNAPSHOT</version>
 
     <properties>
-        <platform-bom.version>2.0.3.RELEASE</platform-bom.version>
-        <lightmin.version>0.2.1-SNAPSHOT</lightmin.version>
+        <platform-bom.version>2.0.7.RELEASE</platform-bom.version>
+        <lightmin.version>0.3.0-SNAPSHOT</lightmin.version>
         <datafactory.version>0.8</datafactory.version>
         <!-- plugin versions -->
         <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
