--- a/spring-batch-lightmin-server-sample/pom.xml
+++ b/spring-batch-lightmin-server-sample/pom.xml
@@ -3,19 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>address-migrator</artifactId>
+        <artifactId>spring-batch-lightmin-samples</artifactId>
         <groupId>org.tuxdevelop</groupId>
         <version>0.3.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>address-migrator-boot</artifactId>
+    <artifactId>spring-batch-lightmin-server-sample</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>org.tuxdevelop</groupId>
-            <artifactId>address-migrator-core</artifactId>
-            <version>${parent.version}</version>
+            <artifactId>spring-batch-lightmin-server</artifactId>
+            <version>0.3.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
