--- a/address-migrator/address-migrator-boot/src/main/resources/application.yml
+++ b/address-migrator/address-migrator-boot/src/main/resources/application.yml
@@ -3,6 +3,8 @@ server:
   port: 9009
   servlet-path: /addressMigrator/
 spring:
+  application:
+    name: address-migrator
   batch:
     lightmin:
       server:
