--- a/address-migrator/address-migrator-core/src/main/resources/application.yml
+++ b/address-migrator/address-migrator-core/src/main/resources/application.yml
@@ -1,10 +1,10 @@
-#Lightmin
-
-#SPRING BOOT
-
 #Logging
 logging:
  level:
   org:
    springframework:
     web: DEBUG
+spring:
+  batch:
+    job:
+      enabled: false
