--- a/address-migrator/address-migrator-war-client/pom.xml
+++ b/address-migrator/address-migrator-war-client/pom.xml
@@ -9,7 +9,11 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>address-migrator-war</artifactId>
+    <artifactId>address-migrator-war-client</artifactId>
+
+    <properties>
+        <start-class>org.tuxdevelop.spring.batch.lightmin.address_migrator.AddressMigratorWarApp</start-class>
+    </properties>
 
     <packaging>war</packaging>
 
@@ -18,7 +22,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-tomcat</artifactId>
-                <version>1.3.2.RELEASE</version>
+                <version>1.3.7.RELEASE</version>
                 <scope>provided</scope>
             </dependency>
         </dependencies>
