--- a/address-migrator/address-migrator-boot-client/pom.xml
+++ b/address-migrator/address-migrator-boot-client/pom.xml
@@ -3,20 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>spring-batch-lightmin-samples</artifactId>
+        <artifactId>address-migrator</artifactId>
         <groupId>org.tuxdevelop</groupId>
         <version>0.3.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
 
-    <modules>
-        <module>address-migrator-boot-client</module>
-        <module>address-migrator-core</module>
-        <module>address-migrator-war-client</module>
-        <module>address-migrator-boot-embedded</module>
-    </modules>
+    <artifactId>address-migrator-boot-client</artifactId>
 
-    <artifactId>address-migrator</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>org.tuxdevelop</groupId>
+            <artifactId>address-migrator-core</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
