updated to lightmin 0.3.0 added lightmin sample server added Listener Job to addressMigrator

--- a/address-migrator/address-migrator-war-client/src/main/resources/application.properties
+++ b/address-migrator/address-migrator-war-client/src/main/resources/application.properties
@@ -2,7 +2,8 @@
 #server.port=9009
 #server.servlet-path=/addressMigrator
 server.context-path=/address-migrator-war-client-0.3.0-SNAPSHOT
-spring.application.name=address-migrator
+server.address=localhost
+spring.application.name=address-migrator-client-war
 spring.batch.lightmin.server.url=http://localhost:50100/lightmin-server
 spring.batch.lightmin.client.prefer-ip=false
 spring.batch.lightmin.client.external-links.hystrix=http://localhost:${server.port}/hystrixdashboard
