--- a/spring-batch-lightmin-server-sample/src/main/resources/application.yml
+++ b/spring-batch-lightmin-server-sample/src/main/resources/application.yml
@@ -1,3 +1,15 @@
 server:
   port: 50100
   servlet-path: /lightmin-server
+spring:
+  application:
+    name: spring-batch-lightmin-server
+  batch:
+    job:
+      enabled: false
+    lightmin:
+      lightmin-repository-type: map
+      batch-repository-type: map
+      server:
+        url: http://localhost:50100/lightmin-server
+        heartbeat-period: 1000
