--- a/spring-batch-lightmin-server-sample/pom.xml
+++ b/spring-batch-lightmin-server-sample/pom.xml
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>org.tuxdevelop</groupId>
             <artifactId>spring-batch-lightmin-server</artifactId>
-            <version>0.3.0-SNAPSHOT</version>
+            <version>${lightmin.version}</version>
         </dependency>
     </dependencies>
 
