--- a/spring-batch-lightmin-server-sample/pom.xml
+++ b/spring-batch-lightmin-server-sample/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>spring-batch-lightmin-samples</artifactId>
         <groupId>org.tuxdevelop</groupId>
-        <version>0.3.1-SNAPSHOT</version>
+        <version>0.4.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -16,6 +16,12 @@
             <groupId>org.tuxdevelop</groupId>
             <artifactId>spring-batch-lightmin-server</artifactId>
             <version>${lightmin.version}</version>
+        </dependency>
+
+        <!-- h2 -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
         </dependency>
     </dependencies>
 
