--- a/address-migrator/pom.xml
+++ b/address-migrator/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>spring-batch-lightmin-samples</artifactId>
         <groupId>org.tuxdevelop</groupId>
-        <version>0.3.1-SNAPSHOT</version>
+        <version>0.4.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
@@ -15,6 +15,7 @@
         <module>address-migrator-core</module>
         <module>address-migrator-war-client</module>
         <module>address-migrator-boot-embedded</module>
+        <module>address-migrator-remote-repository</module>
     </modules>
 
     <artifactId>address-migrator</artifactId>
