--- a/spring-batch-lightmin-repository-server-sample/pom.xml
+++ b/spring-batch-lightmin-repository-server-sample/pom.xml
@@ -3,34 +3,25 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>address-migrator</artifactId>
+        <artifactId>spring-batch-lightmin-samples</artifactId>
         <groupId>org.tuxdevelop</groupId>
         <version>0.4.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>address-migrator-core</artifactId>
+    <artifactId>spring-batch-lightmin-repository-server-sample</artifactId>
 
     <dependencies>
-        <!-- spring batch lightmin -->
+        <!-- lightmin -->
         <dependency>
             <groupId>org.tuxdevelop</groupId>
-            <artifactId>spring-batch-lightmin-client</artifactId>
+            <artifactId>spring-batch-lightmin-repository-server</artifactId>
             <version>${lightmin.version}</version>
         </dependency>
-
-        <!--H2 -->
+        <!-- h2 -->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
-
-        <!--datafactory -->
-        <dependency>
-            <groupId>org.fluttercode.datafactory</groupId>
-            <artifactId>datafactory</artifactId>
-            <version>${datafactory.version}</version>
-        </dependency>
     </dependencies>
-
 </project>
