--- a/pom.xml
+++ b/pom.xml
@@ -16,11 +16,11 @@
 
     <groupId>org.tuxdevelop</groupId>
     <artifactId>spring-batch-lightmin-samples</artifactId>
-    <version>0.4.0-SNAPSHOT</version>
+    <version>0.5.0-SNAPSHOT</version>
 
     <properties>
         <platform-bom.version>Athens-SR3</platform-bom.version>
-        <lightmin.version>0.4.0</lightmin.version>
+        <lightmin.version>0.5.0-SNAPSHOT</lightmin.version>
         <datafactory.version>0.8</datafactory.version>
         <!-- plugin versions -->
         <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
