--- a/address-migrator/pom.xml
+++ b/address-migrator/pom.xml
@@ -16,6 +16,8 @@
         <module>address-migrator-war-client</module>
         <module>address-migrator-boot-embedded</module>
         <module>address-migrator-remote-repository</module>
+        <module>address-migrator-service-discovery-consul</module>
+        <module>address-migrator-service-discovery-eureka</module>
     </modules>
 
     <artifactId>address-migrator</artifactId>
