--- a/pom.xml
+++ b/pom.xml
@@ -27,12 +27,12 @@
     <version>0.5.0-SNAPSHOT</version>
 
     <properties>
-        <platform-bom.version>Brussels-SR5</platform-bom.version>
-        <spring-cloud-dependencies.version>Dalston.SR4</spring-cloud-dependencies.version>
+        <platform-bom.version>Brussels-SR6</platform-bom.version>
+        <spring-cloud-dependencies.version>Edgware.RELEASE</spring-cloud-dependencies.version>
         <lightmin.version>0.5.0-SNAPSHOT</lightmin.version>
         <datafactory.version>0.8</datafactory.version>
         <!-- plugin versions -->
-        <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
+        <maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
         <maven-compiler-plugin.target>1.8</maven-compiler-plugin.target>
         <maven-compiler-plugin.source>1.8</maven-compiler-plugin.source>
     </properties>
