--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
     <version>0.4.0-SNAPSHOT</version>
 
     <properties>
-        <platform-bom.version>Athens-SR3</platform-bom.version>
-        <lightmin.version>0.4.2-SNAPSHOT</lightmin.version>
+        <platform-bom.version>Athens-SR6</platform-bom.version>
+        <lightmin.version>0.4.2</lightmin.version>
         <datafactory.version>0.8</datafactory.version>
         <!-- plugin versions -->
         <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
