--- a/spring-batch-lightmin-server-sample-discovery-eureka/src/main/resources/application.yml
+++ b/spring-batch-lightmin-server-sample-discovery-eureka/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     job:
       enabled: false
     lightmin:
-      lightmin-repository-type: map
+      lightmin-repository-type: jdbc
       batch-repository-type: map
       server:
         heartbeat-period: 1000
