--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>io.spring.platform</groupId>
         <artifactId>platform-bom</artifactId>
-        <version>Brussels-SR6</version>
+        <version>Brussels-SR10</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -28,8 +28,8 @@
     <version>0.5.0-SNAPSHOT</version>
 
     <properties>
-        <platform-bom.version>Brussels-SR6</platform-bom.version>
-        <spring-cloud-dependencies.version>Edgware.RELEASE</spring-cloud-dependencies.version>
+        <platform-bom.version>Brussels-SR10</platform-bom.version>
+        <spring-cloud-dependencies.version>Edgware.SR3</spring-cloud-dependencies.version>
         <lightmin.version>0.5.0-SNAPSHOT</lightmin.version>
         <datafactory.version>0.8</datafactory.version>
         <!-- plugin versions -->
