--- a/address-migrator/address-migrator-remote-repository/pom.xml
+++ b/address-migrator/address-migrator-remote-repository/pom.xml
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>org.tuxdevelop</groupId>
             <artifactId>address-migrator-core</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
