--- a/address-migrator/address-migrator-war-client/pom.xml
+++ b/address-migrator/address-migrator-war-client/pom.xml
@@ -22,7 +22,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-tomcat</artifactId>
-                <version>1.3.7.RELEASE</version>
+                <version>1.5.15.RELEASE</version>
                 <scope>provided</scope>
             </dependency>
         </dependencies>
@@ -32,7 +32,7 @@
         <dependency>
             <groupId>org.tuxdevelop</groupId>
             <artifactId>address-migrator-core</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
