updated samples for 1.0.0-SNAPSHOT

--- a/address-migrator/address-migrator-remote-repository/pom.xml
+++ b/address-migrator/address-migrator-remote-repository/pom.xml
@@ -17,6 +17,18 @@
             <artifactId>address-migrator-core</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <!-- lightmin -->
+        <dependency>
+            <groupId>org.tuxdevelop</groupId>
+            <artifactId>spring-batch-lightmin-client-classic</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.tuxdevelop</groupId>
+            <artifactId>spring-batch-lightmin-repository-remote</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
