--- a/spring-batch-lightmin-repository-server-sample/src/main/resources/application.yaml
+++ b/spring-batch-lightmin-repository-server-sample/src/main/resources/application.yaml
@@ -8,11 +8,9 @@ spring:
 #ligtmin
   batch:
      lightmin:
-       remote:
-         repository:
-           server:
-             lightmin-repository-type: jdbc
-             #override the default table names
-             job-configuration-table-name: job_configuration
-             job-configuration-value-table-name: configuration_value
-             job-configuration-parameter-table-name: configuration_parameter
+       repository:
+         jdbc:
+           #override the default table names
+           job-configuration-table-name: job_configuration
+           job-configuration-value-table-name: configuration_value
+           job-configuration-parameter-table-name: configuration_parameter
