--- a/address-migrator/address-migrator-boot-client/src/main/resources/application.yml
+++ b/address-migrator/address-migrator-boot-client/src/main/resources/application.yml
@@ -7,20 +7,18 @@ spring:
     name: address-migrator
   batch:
     lightmin:
-      server:
-        url: http://localhost:50100/lightmin-server
       client:
         external-links:
           hystrix: http://localhost:${server.port}/hystrixdashboard
           batchtasks: http://localhost:${server.port}/batchtasks
-      #default jdbc
-      batch-repository-type: jdbc
-      #default jdbc
-      lightmin-repository-type: jdbc
-      #default dataSource
-      data-source-name: dataSource
-      #default dataSource
-      batch-data-source-name: dataSource
-      #default BATCH_
-      repository-table-prefix: BATCH_
+        classic:
+          server:
+            url: http://localhost:50100/lightmin-server
+      batch:
+        #default jdbc
+        repository-type: jdbc
+        #default dataSource
+        data-source-name: dataSource
+        #default BATCH_
+        table-prefix: BATCH_
 
