--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>io.spring.platform</groupId>
         <artifactId>platform-bom</artifactId>
-        <version>Brussels-SR12</version>
+        <version>Brussels-SR15</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -28,9 +28,9 @@
     <version>0.5.0-SNAPSHOT</version>
 
     <properties>
-        <platform-bom.version>Brussels-SR12</platform-bom.version>
-        <spring-cloud-dependencies.version>Edgware.SR4</spring-cloud-dependencies.version>
-        <lightmin.version>0.5.0</lightmin.version>
+        <platform-bom.version>Brussels-SR15</platform-bom.version>
+        <spring-cloud-dependencies.version>Edgware.SR5</spring-cloud-dependencies.version>
+        <lightmin.version>1.0.0-SNAPSHOT</lightmin.version>
         <datafactory.version>0.8</datafactory.version>
         <!-- plugin versions -->
         <maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
@@ -51,6 +51,13 @@
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
                 <version>${spring-cloud-dependencies.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.tuxdevelop</groupId>
+                <artifactId>spring-batch-lightmin-bom</artifactId>
+                <version>${lightmin.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
