--- a/address-migrator/address-migrator-boot-embedded/src/main/resources/application.yml
+++ b/address-migrator/address-migrator-boot-embedded/src/main/resources/application.yml
@@ -1,10 +1,14 @@
 #Server
 server:
   port: 9009
-  servlet-path: /addressMigrator
 spring:
+  main:
+    allow-bean-definition-overriding: true
   application:
     name: address-migrator
+  mvc:
+    servlet:
+      path: /addressMigrator
   batch:
     lightmin:
       client:
