--- a/spring-batch-lightmin-server-sample-discovery-consul/src/main/resources/application.yml
+++ b/spring-batch-lightmin-server-sample-discovery-consul/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 server:
   port: 51500
 spring:
+  main:
+    allow-bean-definition-overriding: true
   application:
     name: spring-batch-lightmin-server
   batch:
