updated properties and dependencies

--- a/address-migrator/address-migrator-boot-embedded/src/main/resources/application.yml
+++ b/address-migrator/address-migrator-boot-embedded/src/main/resources/application.yml
@@ -1,14 +1,13 @@
 #Server
 server:
   port: 9009
+  servlet:
+    context-path: /addressMigrator
 spring:
   main:
     allow-bean-definition-overriding: true
   application:
     name: address-migrator
-  mvc:
-    servlet:
-      path: /addressMigrator
   batch:
     lightmin:
       client:
