--- a/address-migrator/address-migrator-boot-client/src/main/resources/application.yml
+++ b/address-migrator/address-migrator-boot-client/src/main/resources/application.yml
@@ -1,8 +1,11 @@
 #Server
 server:
   port: 9009
-  servlet-path: /addressMigrator
+  servlet:
+    context-path: /addressMigrator
 spring:
+  main:
+    allow-bean-definition-overriding: true
   application:
     name: address-migrator
   batch:
@@ -21,4 +24,3 @@ spring:
         data-source-name: dataSource
         #default BATCH_
         table-prefix: BATCH_
-
