--- a/pom.xml
+++ b/pom.xml
@@ -106,12 +106,12 @@
         </plugins>
     </build>
 
-    <!--<repositories>
+    <repositories>
         <repository>
             <id>ossrh</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </repository>
-    </repositories> -->
+    </repositories>
 
 
 </project>
