--- a/address-migrator/address-migrator-remote-repository/src/main/resources/application.yaml
+++ b/address-migrator/address-migrator-remote-repository/src/main/resources/application.yaml
@@ -4,6 +4,8 @@ server:
   servlet:
     context-path: /addressMigratorRemoteRepository
 spring:
+  main:
+    allow-bean-definition-overriding: true
   application:
     name: address-migrator-remote-application
   batch:
