--- a/address-migrator/address-migrator-service-discovery-consul/src/main/resources/application.yml
+++ b/address-migrator/address-migrator-service-discovery-consul/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 server:
   port: 9090
 spring:
+  main:
+    allow-bean-definition-overriding: true
   application:
     name: address-migrator
   cloud:
