--- a/lightmin-jpa-application/pom.xml
+++ b/lightmin-jpa-application/pom.xml
@@ -17,15 +17,23 @@
             <groupId>org.tuxdevelop</groupId>
             <artifactId>spring-batch-lightmin-embedded</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.tuxdevelop</groupId>
+            <artifactId>spring-batch-lightmin-repository-jdbc</artifactId>
+        </dependency>
+
         <!-- spring boot -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-        <!-- h2 -->
+
+        <!-- mariadb -->
+        <!-- using 2.3.0 >= 2.4.0, DatabaseType changed -->
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>2.3.0</version>
         </dependency>
     </dependencies>
 
