updated lightmin samples to version 2.1.0

--- a/spring-batch-lightmin-server-sample-discovery-consul/src/main/resources/application.yml
+++ b/spring-batch-lightmin-server-sample-discovery-consul/src/main/resources/application.yml
@@ -11,3 +11,8 @@ spring:
     lightmin:
       server:
         discovery-enabled: true
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
