--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.2.RELEASE</version>
+        <version>2.1.10.RELEASE</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -28,7 +28,7 @@
     <version>2.0.0-SNAPSHOT</version>
 
     <properties>
-        <spring-cloud-dependencies.version>Greenwich.RELEASE</spring-cloud-dependencies.version>
+        <spring-cloud-dependencies.version>Greenwich.SR4</spring-cloud-dependencies.version>
         <lightmin.version>2.0.1</lightmin.version>
         <datafactory.version>0.8</datafactory.version>
         <!-- plugin versions -->
