updated to version 2.1.1

--- a/address-migrator/address-migrator-service-discovery-eureka/src/main/resources/application.yml
+++ b/address-migrator/address-migrator-service-discovery-eureka/src/main/resources/application.yml
@@ -24,3 +24,6 @@ spring:
         remote:
           server-discovery-name: spring-batch-lightmin-server
           discover-remote-repository: true
+eureka:
+  instance:
+    hostname: 'localhost'
