--- a/lightmin-jpa-application/pom.xml
+++ b/lightmin-jpa-application/pom.xml
@@ -17,6 +17,11 @@
             <groupId>org.tuxdevelop</groupId>
             <artifactId>spring-batch-lightmin-embedded</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.tuxdevelop</groupId>
+            <artifactId>spring-batch-lightmin-repository-jdbc</artifactId>
+        </dependency>
         <!-- spring boot -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
