updated to lightmin 2.2.0

--- a/spring-batch-lightmin-server-sample-discovery-consul/src/main/resources/application.yml
+++ b/spring-batch-lightmin-server-sample-discovery-consul/src/main/resources/application.yml
@@ -11,6 +11,12 @@ spring:
     lightmin:
       server:
         discovery-enabled: true
+  cloud:
+    consul:
+      discovery:
+        hostname: 'localhost'
+        port: ${server.port}
+        include-hostname-in-instance-id: true
 management:
   endpoints:
     web:
