--- a/address-migrator/address-migrator-service-discovery-consul/src/main/resources/application.yml
+++ b/address-migrator/address-migrator-service-discovery-consul/src/main/resources/application.yml
@@ -8,7 +8,9 @@ spring:
   cloud:
     consul:
       discovery:
-        instance-id: ${spring.application.name}
+        hostname: 'localhost'
+        port: ${server.port}
+        include-hostname-in-instance-id: true
   batch:
     lightmin:
       client:
